[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Villager.gd" id="1"]

[sub_resource type="RectangleShape2D" id="VillagerCollisionShape"]
size = Vector2(32, 64)

[node name="Villager" type="Area2D"]
script = ExtResource("1")

[node name="VillagerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -24)
shape = SubResource("VillagerCollisionShape")

[node name="VillagerSprite" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -48.0
offset_right = 12.0
offset_bottom = 0.0
color = Color(0.3, 0.3, 0.3, 1)

[node name="ShadowAura" type="PointLight2D" parent="."]
position = Vector2(0, -24)
energy = 0.3
color = Color(0.4, 0.2, 0.4, 1)
texture_scale = 2.0

[node name="NameLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -70.0
offset_right = 30.0
offset_bottom = -50.0
text = "Villager"
horizontal_alignment = 1